--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,16 +7,14 @@
   <link rel="stylesheet" href="/css/common.css">
   <link rel="stylesheet" href="/css/index.css">
   <link rel="icon" href="/images/s.ico">
-  <link href="https://fonts.googleapis.com/css?family=Roboto Condensed" rel="stylesheet">
 </head>
 <body>
-<header></header>
 <nav>
-  <img src="/images/lupetto.jpg">
+  <img src="/images/omino_con_carrello.png">
   <h2 class="logo">Siw Prodotti</h2>
   <ul>
-    <li><a href="/products" class="sub">Products</a></li>
-    <li><a href="/providers" class="sub">Providers</a></li>
+    <li><a href="/products" class="sub">Prodotti</a></li>
+    <li><a href="/providers" class="sub">Fornitori</a></li>
   </ul>
   <div id="lo">
     <div th:if="${userDetails}">
@@ -32,7 +30,7 @@
 <div class="hero">
   <div class="presentation">
     <h1>Raccolta di prodotti e fornitori</h1>
-    <p>Piattaforma dedicata alla raccolta di prodotti ed i loro fornitori, offrendo agli utenti un'ampia gamma di contenuti acquistabili. Gli utenti potranno scoprire informazioni dettagliate su ogni prodotto, come recensioni e valutazioni, nonché informazioni sui fornitori aventi disponibilità dei vari prodotti..</p>
+    <p>Piattaforma dedicata alla raccolta di prodotti ed i loro fornitori, offrendo agli utenti un'ampia gamma di contenuti acquistabili. Gli utenti potranno scoprire informazioni dettagliate su ogni prodotto, come recensioni e valutazioni, nonché informazioni sui fornitori aventi disponibilità dei vari prodotti.</p>
   </div>
 </div>
 </body>
