--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -52,22 +52,73 @@ nav ul li a {
     font-weight: bold;
 }
 
+nav ul li .sub:hover {
+    color: cornsilk;
+    transition: .3s;
+}
+
 /* Login/Logout buttons */
+/*
 #lo {
     display: flex;
     align-items: center;
 }
 
 #lo .log {
+    border: none;
+    background: #f0bc42;
+    background: linear-gradient(45deg, orange, #f0bc42);
+    padding: 12px 30px;
+    border-radius: 30px;
+    color: #8e1f2f;
+    font-weight: bold;
+    font-size: 15px;
+    transition: .4s;
     text-decoration: none;
-    color: white;
-    border: 1px solid white;
-    padding: 5px 10px;
-    border-radius: 5px;
-    transition: background-color 0.3s, color 0.3s;
 }
 
 #lo .log:hover {
+    transform: scale(1.3);
     background-color: white;
     color: #333;
+}
+*/
+
+button {
+    /*
+    position: absolute;
+    right: 20px;
+    top: 40px;*/
+
+
+    border: none;
+    /*background: #f0bc42;*/
+    background-image: linear-gradient(to left, silver , darkgray , cornsilk , sandybrown );
+    background-size: 200% 100%;
+    padding: 12px 30px;
+    border-radius: 20px;
+    color: black;
+    font-weight: bold;
+    font-size: 15px;
+    transition: background-position 0.3s ease;
+    cursor: pointer;
+}
+
+button:hover {
+    background-position: 100% 0;
+}
+
+.username {
+    font-style: sans-serif;
+    color: cornsilk;
+    padding-right: 10px;
+}
+
+.log {
+    text-decoration: none;
+    color: #8e1f2f;
+}
+
+.log:visited {
+    color: inherit;
 }
