--- a/src/main/resources/templates/admin/homePageAdmin.html
+++ b/src/main/resources/templates/admin/homePageAdmin.html
@@ -8,13 +8,12 @@
   <link rel="stylesheet" href="/css/common.css">
   <link rel="stylesheet" href="/css/indexAdmin.css">
   <link rel="icon" href="/images/favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Roboto Condensed" rel="stylesheet">
 </head>
 
 <body>
 <header></header>
 <nav>
-  <img src="/images/lupetto.jpg">
+  <img src="/images/omino_con_carrello.png">
   <h2 class="logo">Siw Prodotti</h2>
   <ul>
     <li><a href="/products" class="sub">Products</a></li>
