--- a/src/main/resources/templates/formLogin.html
+++ b/src/main/resources/templates/formLogin.html
@@ -17,7 +17,7 @@
     <div class="form-value">
       <form th:action="@{/login}" method="post" class="form">
         <div class="image">
-          <img src="/images/lupetto.jpg">
+          <img src="/images/omino_con_carrello.png">
         </div>
         <span class="login">Log In</span>
         <input type="text" name="username" placeholder="Username" class="form--input">
