--- a/src/main/resources/static/css/loginPage.css
+++ b/src/main/resources/static/css/loginPage.css
@@ -17,7 +17,7 @@ body {
 
 /* Style the navigation bar */
 nav {
-    background:linear-gradient(to right, white, sandybrown, darkgoldenrod);
+    background:linear-gradient(to right, white, sandybrown, darkorange);
     color: black;
     display: flex;
     align-items: center;
