--- a/src/main/resources/templates/admin/homePageAdmin.html
+++ b/src/main/resources/templates/admin/homePageAdmin.html
@@ -36,7 +36,7 @@
     <div class="sub-operation-form">
       <h1>Operazioni Prodotti</h1>
       <ul>
-        <button class="option"><a href="/admin/formNewProduct" class="log">Aggiungi prodotto</a></button>
+        <button class="option"><a href="/admin/formNewProduct" class="op">Aggiungi prodotto</a></button>
         <!--
             <button class="option"><a href="/admin/updateProduct" class="log">Aggiorna prodotto</a></button>
         -->
@@ -45,7 +45,7 @@
     <div class="sub-operation-form">
       <h1>Operazioni Fornitori</h1>
       <ul>
-        <button class="option"><a href="/admin/formNewProvider" class="log">Aggiungi fornitore</a></button>
+        <button class="option"><a href="/admin/formNewProvider" class="op">Aggiungi fornitore</a></button>
         <!--
             <button class="option"><a href="/admin/updateProvider" class="log">Aggiorna provider</a></button>
         -->
