--- a/src/main/resources/static/css/indexAdmin.css
+++ b/src/main/resources/static/css/indexAdmin.css
@@ -1,42 +1,52 @@
+/* Style the admin form */
 .admin-form {
-    height: 100vh;
-    width: 100%;
+
+    padding: 20px;
+    margin: 20px;
+    border-radius: 10px;
 }
 
+/* Style the operations menu */
 .operations-menu {
-    padding-top: 2%;
-    padding-left: 5%;
+    text-align: center;
 }
 
-.title {
-    color: white;
-    font-size: 60px;
-    font-weight: bold;
+.operations-menu .title {
+    font-size: 30px;
+    margin-bottom: 20px;
 }
 
+/* Style the sub-operation forms */
 .sub-operation-form {
-    padding-top: 2%;
-    padding-left: 2%;
-    padding-bottom: 2%;
-    color:white;
+    margin-bottom: 20px;
 }
 
-.sub-operation-form ul {
-    padding-top: 1%;
-    padding-left: 2%;
-    color:white;
+.sub-operation-form h1 {
+    font-size: 20px;
+    margin-bottom: 10px;
 }
 
-.sub-operation-form ul li a {
-    font-size:20px;
+/* Style the buttons in the sub-operation forms */
+.option{
     text-decoration: none;
+    border: none;
+    /*background: #f0bc42;*/
+    background-image: linear-gradient(to left, silver , darkgray , cornsilk , sandybrown );
+    background-size: 200% 100%;
+    padding: 12px 30px;
+    border-radius: 20px;
+    color: black;
+    font-weight: bold;
+    font-size: 15px;
+    transition: 0.3s;
+    cursor: pointer;
 }
 
-.sub-operation-form ul li a:visited {
-    color:inherit;
+.option:hover {
+    transform: scale(1.2);
 }
 
-.sub-operation-form ul {
-    display: flex;
-    gap: 2em;
+.op{
+    text-decoration: none;
+    color: black;
 }
