--- a/src/main/resources/templates/admin/formNewProduct.html
+++ b/src/main/resources/templates/admin/formNewProduct.html
@@ -14,7 +14,7 @@
 
 <header></header>
 <nav>
-  <img src="/images/lupetto.jpg">
+  <img src="/images/omino_con_carrello.png">
   <h2 class="logo">Siw Prodotti</h2>
   <ul>
     <li><a href="/" class="sub">Home</a></li>
@@ -31,7 +31,6 @@
     </div>
   </div>
 </nav>
-<footer></footer>
 
 <section>
   <div class="form-box">
