--- a/src/main/resources/templates/admin/formUpdateProduct.html
+++ b/src/main/resources/templates/admin/formUpdateProduct.html
@@ -8,13 +8,12 @@
   <link rel="stylesheet" href="/css/common.css">
   <link rel="stylesheet" href="/css/updateProduct.css">
   <link rel="icon" href="/images/favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Roboto Condensed" rel="stylesheet">
 </head>
 
 <body>
 <header></header>
 <nav>
-  <img src="/images/lupetto.jpg">
+  <img src="/images/omino_con_carrello.png">
   <h2 class="logo">Siw Prodotti</h2>
   <ul>
     <li><a href="/" class="sub">Home</a></li>
@@ -31,17 +30,16 @@
     </div>
   </div>
 </nav>
-<footer></footer>
 <div th:if="${product}" class="content">
   <div class="product-content">
-    <h1 th:text="${product.name + ', ' + product.price + '$'}">Nome Prodotto, Prezzo Prodotto</h1>
+    <h1 th:text="${product.name + ', ' + product.price + '$'}">Nome, Prezzo</h1>
     <button type="button">
       <a th:href="'/products/'+${product.id}" class="log">Go back to Product</a>
     </button>
     <div class="product-providers">
       <div class="label">
         <div class="main-label">
-          <h3>Club:</h3>
+          <h3>Providers:</h3>
           <button type="button">
             <a th:href="'/admin/manage/addProvider/'+${product.id}" class="log">Update</a>
           </button>
