--- a/src/main/resources/templates/providers.html
+++ b/src/main/resources/templates/providers.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="/css/common.css">
   <link rel="stylesheet" href="/css/providers.css">
   <link rel="icon" href="/images/favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Roboto Condensed" rel="stylesheet">
 </head>
 <body>
 <header></header>
@@ -46,7 +45,7 @@
             <!--<img th:src="@{'data:image/*;base64,'+${provider.profilePicture.base64Image}}">-->
             <img th:src="@{'/display/image/' + ${provider.logo.id}}">
             <div class="provider-info">
-              <h4 th:text="${provider.name + ',' + club.Address}">.</h4>
+              <h4 th:text="${provider.name + ',' + provider.Address}">.</h4>
             </div>
           </a>
         </div>
