--- a/src/main/resources/templates/admin/homePageAdmin.html
+++ b/src/main/resources/templates/admin/homePageAdmin.html
@@ -16,8 +16,8 @@
   <img src="/images/omino_con_carrello.png">
   <h2 class="logo">Siw Prodotti</h2>
   <ul>
-    <li><a href="/products" class="sub">Products</a></li>
-    <li><a href="/providers" class="sub">Providers</a></li>
+    <li><a href="/products" class="sub">Prodotti</a></li>
+    <li><a href="/providers" class="sub">Fornitori</a></li>
   </ul>
   <div id="lo">
     <div th:if="${userDetails}">
