--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -14,8 +14,8 @@
     <img src="/images/lupetto.jpg">
     <h2 class="logo">Siw Prodotti</h2>
     <ul>
-        <li><a href="/products" class="sub">Product</a></li>
-        <li><a href="/providers" class="sub">Providers</a></li>
+        <li><a href="/products" class="sub">Prodotti</a></li>
+        <li><a href="/providers" class="sub">Fornitori</a></li>
     </ul>
     <div id="lo">
         <div th:if="${userDetails}">
