--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initials-scale=1.0">
   <link rel="stylesheet" href="/css/common.css">
   <link rel="stylesheet" href="/css/index.css">
-  <link rel="icon" href="/images/s.ico">
+  <link rel="icon" href="/images/carrello.ico">
 </head>
 <body>
 <nav>
@@ -29,8 +29,8 @@
 <footer></footer>
 <div class="hero">
   <div class="presentation">
-    <h1>Raccolta di prodotti e fornitori</h1>
-    <p>Piattaforma dedicata alla raccolta di prodotti ed i loro fornitori, offrendo agli utenti un'ampia gamma di contenuti acquistabili. Gli utenti potranno scoprire informazioni dettagliate su ogni prodotto, come recensioni e valutazioni, nonché informazioni sui fornitori aventi disponibilità dei vari prodotti.</p>
+    <h1>Prodotti & Recensioni</h1>
+    <p>Esplora una vasta selezione di prodotti da fornitori affidabili. Leggi descrizioni dettagliate e valutazioni degli utenti per fare acquisti informati. Inizia subito la tua ricerca!</p>
   </div>
 </div>
 </body>
