--- a/src/main/resources/templates/providers.html
+++ b/src/main/resources/templates/providers.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initials-scale=1.0">
   <link rel="stylesheet" href="/css/common.css">
   <link rel="stylesheet" href="/css/providers.css">
-  <link rel="icon" href="/images/favicon.ico">
+  <link rel="icon" href="/images/carrello.ico">
 </head>
 <body>
 <header></header>
