--- a/src/main/resources/static/css/product.css
+++ b/src/main/resources/static/css/product.css
@@ -13,12 +13,12 @@
 }
 
 .card img {
-    max-width: 100%;
+    max-width: 50%;
     height: auto;
     border-radius: 5px;
 }
 
-.player-content {
+.product-content {
     flex: 1;
     margin-left: 20px;
 }
@@ -65,6 +65,7 @@ p {
     font-size: 18px;
     font-weight: bold;
     margin-top: 10px;
+    color: white;
 }
 
 /* Product Review */
