--- a/src/main/resources/static/css/provider.css
+++ b/src/main/resources/static/css/provider.css
@@ -1,70 +1,93 @@
-/* Stile per il contenuto principale */
+/* Content */
 .content {
-    background-color: #fff;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 20px;
+    background-color: rgba(255, 255, 255, 0.21);
     margin: 20px;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-/* Stile per le card dei prodotti */
-.card {
-    margin: 10px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    background-size: cover;
 }
 
 .card img {
     max-width: 100%;
     height: auto;
+    border-radius: 5px;
 }
 
-/* Stile per le informazioni del provider */
 .provider-content {
-    margin: 10px;
+    flex: 1;
+    margin-left: 20px;
 }
 
-.provider-content h1 {
+h1 {
     font-size: 24px;
+    font-weight: bold;
     margin-bottom: 10px;
 }
 
-.provider-content p {
+p {
     font-size: 16px;
-    margin-bottom: 5px;
+    line-height: 1.5;
+    margin-bottom: 20px;
 }
 
-/* Stile per la sezione dei prodotti in primo piano */
-.starredproducts-content {
-    margin: 20px 0;
-}
-
-.starredproducts-content h1 {
+.provider-product-content {
+    width: 100%;
+    color: white;
+    margin-left: 10%;
     font-size: 20px;
-    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.starredproducts-content {
+    background: rgba(128, 128, 128, 0.451);
+    padding: 2%;
+    border-radius: 30px;
 }
 
 .products {
     display: flex;
     flex-wrap: wrap;
+    gap: 1em;
 }
 
-.cards {
-    width: calc(33.33% - 20px);
-    margin: 10px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    padding: 10px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+.products .cards {
+    width: 200px;
+    height: 250px;
+    border-radius: 20px;
+    background: #f5f5f5;
+    position: relative;
+    border: 2px solid #c3c6ce;
+    transition: 0.5s;
+    overflow: hidden;
+}
+
+.cards:hover{
+    border: 2px solid darkorange;
+}
+
+.products img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .product-info h4 {
-    font-size: 16px;
-    margin-top: 5px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    padding: 10px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
 }
 
-/* Stile per il messaggio "Non Esiste" */
-div:not(.content) {
-    text-align: center;
-    font-size: 24px;
-    margin-top: 20px;
-    color: #ff0000;
-}
