--- a/src/main/resources/templates/formLogin.html
+++ b/src/main/resources/templates/formLogin.html
@@ -27,7 +27,7 @@
           Login
         </button>
         <button class="form--submit">
-          <a href="/register" id="register">Register</a>
+          <a href="/register" id="register">Registrati</a>
         </button>
       </form>
     </div>
