--- a/src/main/resources/static/css/product.css
+++ b/src/main/resources/static/css/product.css
@@ -20,7 +20,7 @@
 
 .product-content {
     flex: 1;
-    margin-left: 20px;
+
 }
 
 h1 {
@@ -47,25 +47,29 @@ p {
 .providers {
     display: flex;
     flex-wrap: wrap;
+    gap: 1.5em;
 }
 
 .providers .cards {
-    flex: 1;
-    margin: 10px;
-    text-align: center;
+    width: 100px;
+    height: 125px;
+    border-radius: 20px;
+    background: #f5f5f5;
+    position: relative;
+    border: 2px solid #c3c6ce;
+    transition: 0.2s ease-out;
+    overflow: hidden;
 }
 
 .providers img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 5px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .provider-info h4 {
-    font-size: 18px;
-    font-weight: bold;
-    margin-top: 10px;
-    color: white;
+    font-size: 16px;
+    margin: 0;
 }
 
 /* Product Review */
