--- a/src/main/resources/templates/admin/formAddProviders.html
+++ b/src/main/resources/templates/admin/formAddProviders.html
@@ -32,7 +32,7 @@
 </nav>
 <footer></footer>
 <div class="content">
-  <h1>Possible Providers:</h1>
+  <h1>Possibili Fornitori:</h1>
   <div th:unless="${choices.isEmpty()}" class="providers">
     <ul th:each="provider: ${choices}">
       <div class="card">
