--- a/src/main/resources/templates/admin/formUpdateProvider.html
+++ b/src/main/resources/templates/admin/formUpdateProvider.html
@@ -8,13 +8,11 @@
   <link rel="stylesheet" href="/css/common.css">
   <link rel="stylesheet" href="/css/updateProvider.css">
   <link rel="icon" href="/images/carrello.ico">
-  <link href="https://fonts.googleapis.com/css?family=Roboto Condensed" rel="stylesheet">
 </head>
-
 <body>
 <header></header>
 <nav>
-  <img src="/images/lupetto.jpg">
+  <img src="/images/omino_con_carrello.png">
   <h2 class="logo">Siw Prodotti</h2>
   <ul>
     <li><a href="/" class="sub">Home</a></li>
