--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -11,7 +11,7 @@
 <body>
 <header></header>
 <nav>
-    <img src="/images/lupetto.jpg">
+    <img src="/images/omino_con_carrello.png">
     <h2 class="logo">Siw Prodotti</h2>
     <ul>
         <li><a href="/products" class="sub">Prodotti</a></li>
