--- a/src/main/resources/templates/formRegister.html
+++ b/src/main/resources/templates/formRegister.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width,initials-scale=1.0">
   <link rel="stylesheet" href="/css/register.css">
   <link rel="icon" href="/images/carrello.ico">
-  <link href="https://fonts.googleapis.com/css?family=Roboto Condensed" rel="stylesheet">
 
 </head>
 <body>
@@ -19,9 +18,9 @@
     <div class="form-value">
       <form th:action="@{/register}" method="post" class="form">
         <div class="image">
-          <img src="/images/lupetto.jpg">
+          <img src="/images/omino_con_carrello.png">
         </div>
-        <span class="register">Register</span>
+        <span class="register">Registrati</span>
 
         <!-- username input -->
         <input type="text" placeholder="Username" required th:field="${credentials.username}" class="form--input">
@@ -31,18 +30,18 @@
         <span th:if="${#fields.hasErrors('credentials.password')}" th:errors="${credentials.password}"th:style="'color:red'"></span>
 
         <!-- name input -->
-        <input type="text" placeholder="name" required th:field="${user.name}" class="form--input">
+        <input type="text" placeholder="Nome" required th:field="${user.name}" class="form--input">
         <span th:if="${#fields.hasErrors('user.name')}" th:errors="${user.name}"th:style="'color:red'"></span>
         <!-- surname input -->
-        <input type="text" placeholder="surname" required th:field="${user.surname}" class="form--input">
+        <input type="text" placeholder="Cognome" required th:field="${user.surname}" class="form--input">
         <span th:if="${#fields.hasErrors('user.surname')}" th:errors="${user.surname}"th:style="'color:red'"></span>
         <!-- email input -->
-        <input type="text" placeholder="email" required th:field="${user.email}" class="form--input">
+        <input type="text" placeholder="Email" required th:field="${user.email}" class="form--input">
         <span th:if="${#fields.hasErrors('user.email')}" th:errors="${user.email}" th:style="'color:red'"></span>
 
         <span th:if="${param.error != null}">Username o password errati</span>
         <button type="submit" class="form--submit">
-          Register
+          Registrati
         </button>
       </form>
     </div>
