--- a/src/main/resources/templates/providers.html
+++ b/src/main/resources/templates/providers.html
@@ -11,7 +11,7 @@
 <body>
 <header></header>
 <nav>
-  <img src="/images/lupetto.jpg">
+  <img src="/images/omino_con_carrello.png">
   <h2 class="logo">Siw Prodotti</h2>
   <ul>
     <li><a href="/" class="sub">Home</a></li>
